--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "video indexer",
     "cognitive services",
     "subtitles",
-    "video"
+    "video",
+    "machine learning",
+    "ai"
   ],
   "author": "Rachel Weil",
   "license": "MIT",
